# biosal

./: .gitignore  .travis.yml  API.md  CREDITS.md  CodingStyle.md  LICENSE.md  Makefile  README.md  biosal.h  order.mk
Documentation/: API.md  Actors.md  CodingStyle.md  Compilation_Options.md  Cray.md  Guidelines.md  IBM.md  MPI.md  Performance.md  Performance.txt  Public_Samples.md  Public_Samples.txt  Quality_Assurance.md  Quality_Control.md  Tracepoints.md  actor_API.md  counters.md  input_API.md  input_actor_API.md  input_controller.md  logging.txt  macros.txt  malloc.txt  message_API.md  node_API.md  runtime_systems.md
applications/: Makefile.mk
applications/fairness_checker/: Makefile.am  process.c  process.h
applications/spate_metagenome_assembler/: Makefile.am  Makefile.mk  main.c  spate.c  spate.h
core/: Makefile.mk  constants.h
data/: Makefile.mk  coverage_distribution.c  coverage_distribution.h  dna_codec.c  dna_codec.h  dna_kmer.c  dna_kmer.h  dna_kmer_block.c  dna_kmer_block.h  dna_sequence.c  dna_sequence.h
doc/: Makefile  make.bat
engine/: Makefile.mk  active_buffer.h  actor.c  actor.h  actor_vtable.c  actor_vtable.h  bsal_actor.c  bsal_actor.h  bsal_actor_vtable.c  bsal_actor_vtable.h  bsal_fifo.c  bsal_fifo.h  bsal_fifo_array.c  bsal_fifo_array.h  bsal_message.c  bsal_message.h  bsal_node.c  bsal_node.h  bsal_pool.c  bsal_pool.h  bsal_thread.c  bsal_thread.h  bsal_work.c  bsal_work.h  constants.h  dispatcher.c  dispatcher.h  fifo.c  fifo.h  fifo_array.c  fifo_array.h  message.c  message.h  message_queue.c  message_queue.h  node.c  node.h  (+16 more)
(+1036 files in other folders)
