
APPLICATION_FAIRNESS_CHECKER_PRODUCT=applications/fairness_checker/fairness_checker
APPLICATION_FAIRNESS_CHECKER_OBJECTS=applications/fairness_checker/main.o applications/fairness_checker/process.o

APPLICATION_EXECUTABLES+=$(APPLICATION_FAIRNESS_CHECKER_PRODUCT)
APPLICATION_OBJECTS+=$(APPLICATION_FAIRNESS_CHECKER_OBJECTS)

$(APPLICATION_FAIRNESS_CHECKER_PRODUCT): $(APPLICATION_FAIRNESS_CHECKER_OBJECTS) $(LIBRARY_OBJECTS)
	$(Q)$(ECHO) "  LD $@"
	$(Q)$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)

